fix kafka